test/scripted/compilation/errors/ref_immut_to_mut.bnj
# test:subtest
# test:error 6:11 "cannot pass immutable by mutable reference ('ref mut i32')"
# test:note 6:11 "'a' is an immutable reference ('ref i32')"

func f(ref a: i32) {
    f_mut(a);
}

func f_mut(ref mut a: i32) {}

# test:subtest
# test:error 20:11 "cannot pass immutable by mutable reference ('ref mut i32')"
# test:note 20:11 "'s' is an immutable reference ('ref S')"

struct S {
    var a: i32;
}

func f(ref s: S) {
    f_mut(s.a);
}

func f_mut(ref mut a: i32) {}
